@@ -52,7 +52,6 @@ import java.security.spec.InvalidKeySpecException;
 import java.security.spec.KeySpec;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.List;
@@ -83,10 +82,7 @@ public class SecurityUtility {
     public static final String BC_NON_FIPS_PROVIDER_CLASS = "org.bouncycastle.jce.provider.BouncyCastleProvider";
     public static final String CONSCRYPT_PROVIDER_CLASS = "org.conscrypt.OpenSSLProvider";
     public static final Provider CONSCRYPT_PROVIDER = loadConscryptProvider();
-    private static final List<KeyFactory> KEY_FACTORIES = Arrays.asList(
-            createKeyFactory("RSA"),
-            createKeyFactory("EC")
-    );
+    private static final List<String> KEY_FACTORY_ALGORITHMS = List.of("RSA", "EC");
 
     // Security.getProvider("BC") / Security.getProvider("BCFIPS").
     // also used to get Factories. e.g. CertificateFactory.getInstance("X.509", "BCFIPS")
@@ -173,11 +169,11 @@ public class SecurityUtility {
             HostnameVerifier hostnameVerifier = new TlsHostnameVerifier();
             Object wrappedHostnameVerifier = conscryptClazz
                     .getMethod("wrapHostnameVerifier",
-                            new Class[]{HostnameVerifier.class}).invoke(null, hostnameVerifier);
+                            new Class<?>[]{HostnameVerifier.class}).invoke(null, hostnameVerifier);
             Method setDefaultHostnameVerifierMethod =
                     conscryptClazz
                             .getMethod("setDefaultHostnameVerifier",
-                                    new Class[]{Class.forName("org.conscrypt.ConscryptHostnameVerifier")});
+                                    new Class<?>[]{Class.forName("org.conscrypt.ConscryptHostnameVerifier")});
             setDefaultHostnameVerifierMethod.invoke(null, wrappedHostnameVerifier);
         } catch (Exception e) {
             log.warn("Unable to set default hostname verifier for Conscrypt", e);
@@ -195,7 +191,7 @@ public class SecurityUtility {
      * Throw Exception if failed.
      */
     public static Provider getBCProviderFromClassPath() throws Exception {
-        Class clazz;
+        Class<?> clazz;
         try {
             // prefer non FIPS, for backward compatibility concern.
             clazz = Class.forName(BC_NON_FIPS_PROVIDER_CLASS);
@@ -329,7 +325,7 @@ public class SecurityUtility {
         PrivateKey privateKey = loadPrivateKeyFromPemFile(keyFilePath);
 
         SslContextBuilder builder =
-                SslContextBuilder.forServer(privateKey, (X509Certificate[]) certificates).sslProvider(sslProvider);
+                SslContextBuilder.forServer(privateKey, certificates).sslProvider(sslProvider);
         setupCiphers(builder, ciphers);
         setupProtocols(builder, protocols);
         if (StringUtils.isNotBlank(trustCertsFilePath)) {
@@ -431,12 +427,12 @@ public class SecurityUtility {
             try {
                 Class<?> conscryptClazz = Class.forName("org.conscrypt.Conscrypt");
                 Object hostnameVerifier = conscryptClazz.getMethod("getHostnameVerifier",
-                        new Class[]{TrustManager.class}).invoke(null, trustManager);
+                        new Class<?>[]{TrustManager.class}).invoke(null, trustManager);
                 if (hostnameVerifier == null) {
                     Object defaultHostnameVerifier = conscryptClazz.getMethod("getDefaultHostnameVerifier",
-                            new Class[]{TrustManager.class}).invoke(null, trustManager);
+                            new Class<?>[]{TrustManager.class}).invoke(null, trustManager);
                     if (defaultHostnameVerifier != null) {
-                        conscryptClazz.getMethod("setHostnameVerifier", new Class[]{
+                        conscryptClazz.getMethod("setHostnameVerifier", new Class<?>[]{
                                 TrustManager.class,
                                 Class.forName("org.conscrypt.ConscryptHostnameVerifier")
                         }).invoke(null, trustManager, defaultHostnameVerifier);
@@ -474,6 +470,7 @@ public class SecurityUtility {
                 inStream.reset();
             }
             cf = CertificateFactory.getInstance("X.509");
+            @SuppressWarnings("unchecked") // CertificateFactory.getInstance("X.509") returns X509Certificate instances
             Collection<X509Certificate> collection = (Collection<X509Certificate>) cf.generateCertificates(inStream);
             return collection.toArray(new X509Certificate[collection.size()]);
         } catch (CertificateException | IOException e) {
@@ -521,12 +518,12 @@ public class SecurityUtility {
                 sb.append(currentLine);
             }
             final KeySpec keySpec = new PKCS8EncodedKeySpec(Base64.getDecoder().decode(sb.toString()));
-            final List<String> failedAlgorithm = new ArrayList<>(KEY_FACTORIES.size());
-            for (KeyFactory kf : KEY_FACTORIES) {
+            final List<String> failedAlgorithm = new ArrayList<>(KEY_FACTORY_ALGORITHMS.size());
+            for (String algorithm : KEY_FACTORY_ALGORITHMS) {
                 try {
-                    return kf.generatePrivate(keySpec);
-                } catch (InvalidKeySpecException ex) {
-                    failedAlgorithm.add(kf.getAlgorithm());
+                    return KeyFactory.getInstance(algorithm).generatePrivate(keySpec);
+                } catch (InvalidKeySpecException | NoSuchAlgorithmException ex) {
+                    failedAlgorithm.add(algorithm);
                 }
             }
             throw new KeyManagementException("The private key algorithm is not supported. attempted: "
@@ -552,7 +549,7 @@ public class SecurityUtility {
 
     private static void setupKeyManager(SslContextBuilder builder, PrivateKey privateKey,
             X509Certificate[] certificates) {
-        builder.keyManager(privateKey, (X509Certificate[]) certificates);
+        builder.keyManager(privateKey, certificates);
     }
 
     private static void setupCiphers(SslContextBuilder builder, Set<String> ciphers) {
@@ -596,11 +593,4 @@ public class SecurityUtility {
         return provider;
     }
 
-    private static KeyFactory createKeyFactory(String algorithm) {
-        try {
-            return KeyFactory.getInstance(algorithm);
-        } catch (Exception e) {
-            throw new IllegalArgumentException(String.format("Illegal key factory algorithm " + algorithm), e);
-        }
-    }
 }
